test/libsolidity/syntaxTests/nameAndTypeResolution/tuple_invalid_literal_too_large_exp.sol
contract C {
    function f() pure public {
        (2**270, 1);
    }
}
// ----
// TypeError: (53-59): Invalid rational number.
